styled visual piano according to 414px (my phone viewport width), fixed an issue with uneven black case keyboard padding, ready to do media queries for piano

--- a/client/src/scenes/visualizer/pianoFretboard/styles.css
+++ b/client/src/scenes/visualizer/pianoFretboard/styles.css
@@ -11,11 +11,12 @@
     width: 100%;
     min-width: 300px;
     height: 32vw;
+    height: 29vw; /* bring it to the size of freboard at viewport width === 414px */
     
     box-shadow: inset -1px 0px 11px 0px rgba(0, 0, 0, 0.75);
     
     /* padding: 5vw 5vw 0 5vw; removed to make left-right black bar case margin symmetrical */
-    padding: 5vw 0vw 0 5vw; /* added to make left-right black bar case margin symmetrical */
+    /* padding: 5vw 0vw 0 5vw; */ /* added to make left-right black bar case margin symmetrical */
                             /* this setting seems to work for 2 octave piano */
 
     /* padding: 5vw 3vw 0 5vw; this setting seems to work for 1 octave piano */
@@ -29,6 +30,11 @@
     cursor: default;
 
     box-sizing: border-box;
+
+    display: flex;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    padding-top: 5vw;
 }
 
 .keyboard li {
@@ -41,10 +47,12 @@
 
 .key.black{
     height: 13vw;
+    height: 15vw;
     width: 3.6%;
     margin: 0 0 0 0;
 
-    left: -2.2%;
+    /* left: -2.2%; */
+    left: -1.8%;
     z-index: 2;
     border-radius: 0 0 0.1875em 0.1875em;
     box-shadow: -1px -1px 2px rgba(255,255,255,0.2) inset, 0 -5px 2px 3px rgba(0,0,0,0.6) inset, 0 2px 4px rgba(0,0,0,0.5);
@@ -58,6 +66,7 @@
 .key.white{
     color: grey;
     height: 27.5vw;
+    height: 25vw;
     width: 7%;
     z-index: 1;
     border-left: 1px solid #bbb;
@@ -94,10 +103,7 @@
     display:block;
     line-height: initial;
     border-radius: 50%;
-    width: 18px;
     background-color: rgb(209, 129, 14);
-    height: 18px;
-    line-height: 18px;
     text-shadow: 0px 1px 2px rgb(68, 68, 68);
     box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.75);
     color: white;
@@ -105,8 +111,20 @@
     bottom: "100%";
     position: relative;
     text-align: center;
-    font-size: 12px;
     margin: 0 auto;
+
+    /* width: 18px;
+    height: 18px;
+    line-height: 18px;
+    font-size: 12px; 414px conversion */
+
+    width: 16px;
+    line-height: 16px;
+    height: 16px;
+    font-size: 10px; 
+
+   
+    
 }
 
 .keyboard .note.visible { /* updated in fixing CSS clash between guitar and piano*/ 
@@ -129,6 +147,10 @@
     background-color: rgb(209, 129, 14);
 
 
+}
+
+.key.black .note { /* turn this intoa  media query, for some reason the note marker isnt centered when the width of .key.black is so low */
+     right: 2px; 
 }
 
 .key.white .keyboardNote {
@@ -159,7 +181,8 @@
 }
 
 .key.white.twoOctave {
-    width: 6.7%;
+    /* width: 6.7%; the left-right black keyboard case margins weren't equal */
+    width: calc(100% / 14);
 }
 .key.black.twoOctave {
     width: 3.6%;
